# themis-ai

./: .gitignore  PROFESSIONAL_FIX.md  README.md  TRAINING_STATUS.md  check_gpu.py  combined_dataset.json  create_large_dataset.py  pyproject.toml  themis_colab.ipynb  training_dataset_large.json  web_app.py
benchmarks/: __init__.py
environments/: __init__.py  reasoning_env.py  text_env.py
scripts/: analyze_training.py  build_combined_dataset.py  chat_interactive.py  chat_language.py  check_gradients.py  check_training.py  comprehensive_test.py  comprehensive_test_simple.py  debug_nan.py  deep_diagnosis.py  demo.py  demo_interactive_simple.py  demo_simple.py  diagnose.py  diagnose_checkpoint.py  diagnose_policy.py  evaluate.py  prepare_tinystories.py  quick_diagnosis.py  quick_train_test.py  test_answers.py  test_compact.py  test_multitoken.py  test_real_ai.py  test_simple_large.py  train.py  train_combined.py  train_improved.py  train_language.py  train_real_ai.py  train_simple.py  train_simple_large.py
templates/: index.html
tests/: test_environments.py  test_free_energy.py  test_integration.py  test_perception.py  test_phase1_audit.py  test_planning.py  test_trainer.py  test_world_model.py
themis/: __init__.py  config.py
themis/core/: __init__.py  distributions.py  expected_free_energy.py  free_energy.py  math_utils.py
themis/encoders/: __init__.py  text_encoder.py
themis/layers/: __init__.py  action.py  markov_blanket.py  meta_learning.py  orchestrator.py  perception.py  planning.py  world_model.py
themis/models/: __init__.py  likelihood.py  (+3 more)
(+4 files in other folders)
